--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'dev.harivignesh'
-version '1.0.1'
+version '1.0.2'
 
 repositories {
     mavenCentral()
@@ -23,7 +23,7 @@ intellij {
 runIde {
     // Absolute path to installed target 3.5 Android Studio to use as IDE Development Instance
     // The "Contents" directory is macOS specific.
-    ideDirectory '/Applications/Android Studio.app/Contents'
+    // ideDirectory '/Applications/Android Studio.app/Contents'
 }
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
@@ -35,9 +35,12 @@ patchPluginXml {
     sinceBuild '192'
     untilBuild '201'
     changeNotes """
-    Patch<br>
+    Release notes<br>
     <ul>
-    <li>Supporting different version of AS and IDEA</li>
+    <li>Better alignment for generated code</li>
+    <li>Leveraging Kotlin TODO()</li>
+    <li>@JvmSynthetic factory DSL function</li>
+    <li>Pascal case support for factory DSL function</li>
     </ul>
     """
 }
