docs: master ready

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,7 +24,7 @@
     <li>Select "Generate"</li>
     </ul>
     <H3>Output</H3>
-    <img src="https://raw.githubusercontent.com/Hariofspades/dsl-api-generator/1.0.2/art.png"/>
+    <img src="https://raw.githubusercontent.com/Hariofspades/dsl-api-generator/master/art.png"/>
     <br>
     ]]></description>
 
