--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'dev.harivignesh'
-version '1.0.2'
+version '1.0.3'
 
 repositories {
     mavenCentral()
@@ -33,14 +33,11 @@ compileTestKotlin {
 }
 patchPluginXml {
     sinceBuild '192'
-    untilBuild '201'
+    untilBuild '203'
     changeNotes """
     Release notes<br>
     <ul>
-    <li>Better alignment for generated code</li>
-    <li>Leveraging Kotlin TODO()</li>
-    <li>@JvmSynthetic factory DSL function</li>
-    <li>Pascal case support for factory DSL function</li>
+    <li>Update to support build till 203</li>
     </ul>
     """
 }
